--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
+}
+
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
 
 /*form*/
 
@@ -12,6 +25,25 @@
 
 }
 
+.criar-campo-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: aliceblue;
+    padding: 10px;
+    margin-bottom: 35px;
+    
+}
+
+.open-modal-add{
+    padding: 5px 10px;
+    background: #0094E1;
+    color: #fff;
+    border: none;
+    height: 25px;
+    border-radius: 4px;
+}
+
 .novoCampo{
     width: 100%;
     border: 1px solid  rgb(0, 217, 255);
@@ -22,6 +54,7 @@
 
 }
 
+
 .novoCampo div{
     display: flex;
     align-items: center;
@@ -29,28 +62,109 @@
     gap: 10px;
 }
 
+.novoCampo div button{
+    width: 25px;
+    height: 25px;
+}
+
 .novoCampo input, .novoCampo select{
     width: 100%;
+    height: 30px;
+    font-size: 18px;
+    padding: 0px 5px;
 }
 
 
 
 /*modal adiciona*/
 
+.modal-criar-campo{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.212);
+    position: absolute;
+    top: 0px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+
+.modal-campo-container{
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    padding: 20px;
+    background-color: #fff;
+    padding: 20px 20px 30px;
+}
+
+.close-modal-add{
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 0px 10px 10px 10px;
+}
+
+.modal-campo-container h2{
+    text-align: center;
+
+}
+
+.form-cria-campo{
+    border: 1px solid red;
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 10px;
+    margin-top: 30px;
+}
+
+
+.msg-option{
+    border: 1px dashed grey;
+    max-width: 100%;
+    height: 50px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 
 .input-criar-option{
     display: flex;
     align-items: flex-end;
+    margin-bottom: 35px;
     
-}
-
-.input-criar-option button{
-    height: 21px;
 }
 
 .input-add-option{
     display: flex;
     flex-direction: column;
+    width: 100%;
+}
+
+.input-criar-option button{
+    height: 20px;
+    padding:5px 10px;
+}
+
+ .input-add-option input{
+    height: 30px;
+    padding: 0px 14px;
+    font-size: 16px;
 }
 
 
@@ -65,11 +179,29 @@
 .option-item{
     display: flex;
     align-items: center;
-    gap: 10px;
-    
+    gap: 5px;
     margin: 10px 0px;
+   
+    justify-content: space-between;
 }
 
+.option-item input{
+    width: 100%;
+    height: 30px;
+    padding: 0px 14px;
+    font-size: 18px;
+}
+
+.option-item button{
+    width: 40px;
+    height: 35px;
+    font-weight: bold;
+    color: red;
+    background: #F0F0F0;
+    
+    border: none;
+
+}
 
 #valorInput{
     border:none;
@@ -82,27 +214,26 @@
     flex-direction: column;
 }
 
-.form-cria-campo{
-    border: 1px solid red;
-    max-width: 500px;
+.campo-input input, .campo-input select{
+    height: 30px;
+    padding: 0px 14px;
+    font-size: 16px;
+}
+
+.salvar-campo{
+    max-width: 137px;
+    width: 100%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    padding: 10px;
-}
-
-
-
-
-.msg-option{
-    border: 1px dashed grey;
-    max-width: 100%;
-    display: none;
-    align-items: center;
-    justify-content: center;
+    height: 36px;
+    background: #1C813C;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    font-size: 18px;
 
 }
+
+
 
 
 
