--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body{
 .input-criar-option{
     display: flex;
     align-items: flex-end;
-    margin-bottom: 35px;
+    
     
 }
 
@@ -176,11 +176,12 @@ body{
 
 
 .option-container{
-    display: block;
+    display: none;
 }
 
 .option-lista{
     max-width: 500px;
+    margin-top: 35px;
 
 }
 .option-item{
