--- a/style.css
+++ b/style.css
@@ -127,12 +127,10 @@ body{
 }
 
 .form-cria-campo{
-    border: 1px solid red;
-    max-width: 500px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
     padding: 10px;
     margin-top: 30px;
 }
@@ -180,7 +178,6 @@ body{
 }
 
 .option-lista{
-    max-width: 500px;
     margin-top: 35px;
 
 }
@@ -189,8 +186,8 @@ body{
     align-items: center;
     gap: 5px;
     margin: 10px 0px;
-   
     justify-content: space-between;
+    position: relative;
 }
 
 .option-item input{
@@ -198,6 +195,11 @@ body{
     height: 30px;
     padding: 0px 14px;
     font-size: 18px;
+}
+
+.option-item svg{
+    position: absolute;
+    right: 60px;
 }
 
 .option-item button{
