--- a/style.css
+++ b/style.css
@@ -162,8 +162,14 @@ body{
 }
 
 .input-criar-option button{
-    height: 20px;
+    width: 100px;
+    height: 24px;
     padding:5px 10px;
+    background: #0094E1;
+    border: none;
+    color: #fff;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
  .input-add-option input{
@@ -181,6 +187,12 @@ body{
     margin-top: 35px;
 
 }
+
+.option-lista h4{
+    margin-top: 35px;
+
+}
+
 .option-item{
     display: flex;
     align-items: center;
