--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body{
 
 
 .msg-option{
-    border: 1px dashed grey;
+    border: 2px dashed #bfbfbf;
     max-width: 100%;
     height: 50px;
     margin-top: 10px;
@@ -145,6 +145,11 @@ body{
     align-items: center;
     justify-content: center;
 
+}
+
+.msg-option p{
+    font-weight: bold;
+    color: #6e6e6e;
 }
 
 
@@ -159,6 +164,15 @@ body{
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.option-lista-edit{
+    margin-top: 20px;
+}
+
+.option-lista-edit{
+    color: #595959 !important;
+
 }
 
 .input-criar-option button{
@@ -220,7 +234,7 @@ body{
     font-weight: bold;
     color: red;
     background: #F0F0F0;
-    
+    cursor: pointer;
     border: none;
 
 }
@@ -252,6 +266,7 @@ body{
     color: #fff;
     border-radius: 4px;
     font-size: 18px;
+    cursor: pointer;
 
 }
 
@@ -262,18 +277,77 @@ body{
 
 /* editar campo */
 
+.modal-edit-campo{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.212);
+    position: absolute;
+    top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-edit-campo-container{
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    padding: 20px;
+    background-color: #fff;
+    padding: 20px 20px 30px;
+
+}
+
+#id-campo{
+    display: none;
+}
 
 
+.modal-edit-campo-container h2{
+    text-align: center;
+    color: #595959;
+}
 
+.close-modal-edit{
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    font-size: 26px;
+    font-weight: bold;
+    border: none;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 0px 10px 10px 10px;
+    color: #595959;
+    cursor: pointer;
+}
 
 
 .form-edit-campo{
-    max-width: 600px;
+   
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
+.salvar-campo-edit{
+    max-width: 137px;
     width: 100%;
     margin: 0 auto;
-    border: 2px solid green;
-    padding: 20px;
+    height: 36px;
+    background: #1C813C;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    font-size: 18px;
+    cursor: pointer;
 
-    margin-top: 50px;
 }
+
 
