--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body{
 
 .novo-formulario-container{
     border: 1px solid  blue;
+
+    max-width: 1200px;
+    margin: 50px auto;
 }
 
 .novo-formulario-container h1{
@@ -59,6 +62,17 @@ body{
     margin-bottom: 30px;
 }
 
+.form-campo-container label{
+    font-weight: bold;
+    color: #1c813c;
+    
+}
+
+.form-campo-container label small{
+    color: #595555;
+    font-weight: normal;
+}
+
 .form-campo-container input{
     
     height: 30px;
@@ -80,7 +94,6 @@ body{
 
 .novoCampo{
     width: 100%;
-    border: 1px solid  rgb(0, 217, 255);
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -136,6 +149,30 @@ body{
 
 #novo-form:has(novoCampo){
     border: 1px solid red;
+}
+
+
+.msg-campo-vazio{
+    height: 200px;
+    border: 2px dashed #cccccc;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+}
+
+.msg-campo-vazio p{
+    text-align: center;
+}
+
+.msg-campo-vazio strong{
+    color: #595555;
+}
+
+#novo-form:has(.novoCampo) .msg-campo-vazio{
+    display: none;
 }
 
 /*modal adiciona*/
