--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body{
     background-color: rgba(0, 0, 0, 0.212);
     position: absolute;
     top: 0px;
-    display: none;
+    display: block;
     justify-content: center;
     align-items: center;
     
@@ -230,18 +230,18 @@ body{
 
 
 .msg-option{
-    border: 2px dashed #bfbfbf;
     max-width: 100%;
     height: 50px;
     margin-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 2px dashed #cccccc;
+    border-radius: 4px;
 
 }
 
 .msg-option p{
-    font-weight: bold;
     color: #6e6e6e;
 }
 
@@ -357,6 +357,35 @@ body{
     margin-top: 6px;
     border-radius: 4px;
 }
+
+.info-tipo-container{
+    position: relative;
+
+}
+
+.info-tipo-open{
+    display: flex;
+}
+
+.info-tipo{
+    background: aliceblue;
+    padding: 15px;
+    width: 150px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    position: absolute;
+    left: 126px;
+}
+
+.info-tipo p{
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 
 .salvar-campo{
     max-width: 137px;
