--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body{
     background-color: rgba(0, 0, 0, 0.212);
     position: absolute;
     top: 0px;
-    display: block;
+    display: none;
     justify-content: center;
     align-items: center;
     
