--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background: #ebeff2;
 }
 
 .erro-campo{
@@ -19,10 +20,10 @@ body{
 /*form*/
 
 .novo-formulario-container{
-    border: 1px solid  blue;
-
+    background: #ffff;
     max-width: 1200px;
     margin: 50px auto;
+    padding: 50px 20px;
 }
 
 .novo-formulario-container h1{
@@ -93,11 +94,12 @@ body{
 }
 
 .novoCampo{
-    width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
+    background: #fafafa;
+    padding: 10px;
 
 }
 
@@ -368,6 +370,7 @@ body{
 
 .info-tipo-open{
     display: flex;
+    align-items: center;
 }
 
 .info-tipo{
@@ -405,8 +408,8 @@ body{
 }
 
 .active-intro{
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -415,6 +418,7 @@ body{
     margin-left: 5px;
     background: #6e7270;
     color: #fff;
+    font-size: 12px;
 }
 
 .active-intro:hover ~ .info-tipo{
@@ -475,6 +479,7 @@ body{
 .modal-edit-campo-container h2{
     text-align: center;
     color: #595959;
+    margin-top: 20px;
 }
 
 .close-modal-edit{
