--- a/style.css
+++ b/style.css
@@ -91,6 +91,14 @@ body{
     border: none;
     height: 25px;
     border-radius: 4px;
+    transition: 0.3s;
+    cursor: pointer;
+    
+}
+
+.open-modal-add:hover{
+    background: #0180c5;
+    transition: 0.3s;
 }
 
 .novoCampo{
@@ -176,6 +184,32 @@ body{
 #novo-form:has(.novoCampo) .msg-campo-vazio{
     display: none;
 }
+
+
+.salvar-form{
+    max-width: 137px;
+    width: 100%;
+    margin: 0 auto;
+    height: 36px;
+    background: #1C813C;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s ease-in;
+}
+
+
+.salvar-form:hover{
+    background: #14682f;
+    transition: 0.3s ease-in;
+}
+
 
 /*modal adiciona*/
 
