--- a/style.css
+++ b/style.css
@@ -486,7 +486,7 @@ body{
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.212);
-    position: absolute;
+    position: fixed;
     top: 0px;
     display: none;
     justify-content: center;
