--- a/style.css
+++ b/style.css
@@ -351,6 +351,9 @@ body{
     position: relative;
 }
 
+
+
+
 .option-item input{
     width: 100%;
     height: 30px;
@@ -361,20 +364,30 @@ body{
     border: 1px solid #CCCCCC;
 }
 
-.option-item svg{
-    position: absolute;
-    right: 60px;
+
+
+.btns-option{
+    display: flex;
+    gap: 3px;
 }
 
 .option-item button{
-    width: 40px;
+    width: 50px;
     height: 32px;
     font-weight: bold;
     color: red;
     background: #F0F0F0;
     cursor: pointer;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+}
+
+.option-item .salvar-editar-option{
+    color: #0094e1;
+    display: none;
 }
 
 #valorInput{
